--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "db:studio": "bunx drizzle-kit studio"
   },
   "dependencies": {
+    "@hono/standard-validator": "^0.1.5",
     "@logtape/logtape": "^1.1.1",
     "drizzle-orm": "^0.44.6",
     "env-var": "^7.5.0",
     "hono": "^4.9.10",
-    "postgres": "^3.4.7"
+    "hono-openapi": "^1.1.0",
+    "postgres": "^3.4.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@0x32/prettier": "^1.0.0",
