--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "env-var": "^7.5.0",
     "hono": "^4.9.10",
     "hono-openapi": "^1.1.0",
+    "ioredis": "^5.8.1",
     "postgres": "^3.4.7",
+    "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
