--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "format": "prettier --write .",
     "lint": "eslint . --fix",
     "check-types": "tsc --noEmit",
+    "pretty": "bun format && bun lint && bun check-types",
     "db:push": "bunx drizzle-kit push",
     "db:generate": "bunx drizzle-kit generate",
     "db:migrate": "bunx drizzle-kit migrate",
@@ -13,6 +14,7 @@
   "dependencies": {
     "@hono/standard-validator": "^0.1.5",
     "@logtape/logtape": "^1.1.1",
+    "@mishkat/remnawave-sdk": "^1.0.1",
     "drizzle-orm": "^0.44.6",
     "env-var": "^7.5.0",
     "hono": "^4.9.10",
